<?xml version="1.0" encoding="UTF-8"?>

    <resources>

    <string name="app_name">Tutron</string>

    <!-- Sign Up Prompt Page -->


    <string name="intro_text_string">Connect with eager students or highly qualified tutors.</string>

    <string name="sign_up_prompt_string">Become a...</string>

    <string name="student_btn_string">Student</string>
    <string name="tutor_btn_string">Tutor</string>

    <string name="welcome_to_string">Sign Up To Tutron!</string>

    <string name="logo_image_string">Paper with A plus and pencil</string>

    <!-- Student (&tutor) Sign Up Page -->


    <string name="email_generic_com_string">Email@generic.com</string>

    <string name="password_string">Password</string>

    <string name="thank_you_for_signing_up_student_string">Thank You For Signing Up As A Student</string>

    <string name="set_up_your_details_string">Please enter your details</string>

    <string name="first_name_string">First name</string>

    <string name="first_name_ek1_string">First name</string>

    <string name="last_name_string">Last name</string>

    <string name="last_name_ek1_string">Last name</string>

    <string name="email_string">Email </string>

    <string name="country_string">Country</string>
    <string name="city_string">City</string>
    <string name="region_string">Region</string>
    <string name="postalcode_string">Postal Code</string>
    <string name ="postalcode_prompt_string">A1A 1A1</string>


    <string name="address_string">Address</string>

    <string name="password_ek1_string">Password</string>

    <string name="continue_string">Continue</string>

    <!-- Student Sign Up Page - Payement -->


    <string name="payment_method_string">Payment Method</string>

    <string name="card_holder_name_string">Card Holder Name</string>

    <string name="credit_debit_card_numbers_string">Credit/Debit Card Numbers</string>
    <string name="credit_debit_card_numbers_prompt_string">################</string>

    <string name="cvv_number_string">CVV Number</string>
    <string name="cvv_prompt_string">CVV</string>

    <string name="expiration_number_string">Expiration Number</string>
    <string name="expiration_prompt_string">MMYY</string>

    <string name="we_assure_you_that_your_personal_and_credit_card_information_will_not_be_used_without_your_explicit_consent__string">We assure you that your personal and credit card information will not be used without your explicit consent.</string>

    <string name="submit_string">Submit</string>

    <string name="expiration_warning">***WARNING! INVALID DATE***</string>


    <!-- Tutor Sign Up Page -->


    <string name="thank_you_for_signing_up_tutor_string">Thank You For Signing Up As A Tutor!</string>

    <string name="education_level_string">Education Level</string>

    <string name="native_language_string">Native Language</string>

    <string name="description_string">Description</string>

    <string name="description_prompt_string">Personal Short Description...(600 characters max.)</string>

    <string name="profile_picture_prompt_string">Click Image To Set A Profile Picture (optional)</string>

    <string name="signup_warning">***WARNING! PLEASE FILL OUT ALL THE BOXES***</string>

    <string name="desc_warning">***WARNING! DESCRIPTION HAS MORE THAN 600 CHARACTERS***</string>

    <string name="email_warning">***WARNING! INVALID EMAIL***</string>

    <!-- Welcome -->


    <string name="ek_img_content">ExportKit Image</string>

    <string name="welcome__string">Welcome,</string>

    <string name="you_are_logged_in_as_a_string">You are logged in as a</string>

    <!-- Landing -->


    <string name="sign_up_text">Sign Up</string>

    <string name="login_text">Login</string>

    <string name="Tutron_landing_prompt">Welcome to Tutron!</string>

    <string name="landing_desc">An enriching community of learners and teachers.</string>

    <string name="landing_action_prompt">Login to an existing account, or sign up and join our community!</string>

    <!-- Login -->


    <string name="welcome_back">Welcome Back</string>

    <string name="enter_credentials_string">Please enter your credentials</string>

    <string name="account_warning">***WARNING! THIS ACCOUNT DOES NOT EXIST***</string>

    <string name="password_warning">***WARNING! INCORRECT PASSWORD***</string>

    <!-- Welcome -->

    <string name="welcome_welcome_page">Welcome, </string>
    <string name="login_status_text_string">YOU ARE LOGGED IN AS: </string>
    <string name="suspend_permanently">Suspend Permanently</string>
    <string name="suspend_temporary">Suspend Temporary</string>
    <string name="tutorname">Tutor Name</string>
    <string name="date_suspension">Date Suspension</string>
    <string name="dismiss">Dismiss</string>

    <!-- Admin Inbox -->
    <string name="admin_inbox_title">Complaints Inbox</string>
    <string name="admin_inbox_desc">Active complaints pending decision</string>

    <!-- Test for Complaints -->

    <string-array name="titles">
        <item>I hate my tutor</item>
        <item>My tutor sucks</item>
        <item>Fire my tutor</item>
        <item>My tutor is mean</item>
        <item>My tutor</item>
    </string-array>

    <string-array name="desc">
        <item>My tutor is not good at teaching</item>
        <item>My tutor is bad</item>
        <item>My tutor should not be working</item>
        <item>My tutor said something mean</item>
        <item>My tutor doesn\'t know what they are doing</item>
    </string-array>

    <string-array name="id">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string-array name="sorting">
        <item>Sort By: Not Selected</item>
        <item>Sort By: User Ratings</item>
        <item>Sort By: Hourly Rate</item>
        <item>Sort By: Number of Lessons</item>
    </string-array>



</resources>