<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="#CADEE8"
	tools:context=".GUI.StudentSignUpPayment">

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		tools:layout_editor_absoluteX="1dp"
		tools:layout_editor_absoluteY="1dp">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:orientation="vertical" >

			<Space
				android:layout_width="match_parent"
				android:layout_height="20dp" />

			<TextView
				android:id="@+id/payment_method_text"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:fontFamily="@font/andada"
				android:text="@string/payment_method_string"
				android:textAlignment="center"
				android:gravity="center"
				android:textColor="#0088C8"
				android:textSize="36sp"
				android:textStyle="bold"
				android:paddingLeft="10dp"
				android:paddingRight="10dp"/>

			<Space
				android:layout_width="match_parent"
				android:layout_height="20dp" />

			<TextView
				android:id="@+id/disclaimer"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:fontFamily="@font/andada"
				android:textStyle="bold"
				android:textSize="24sp"
				android:gravity="center"
				android:textAlignment="center"
				android:textColor="#4E4E4E"
				android:paddingLeft="10dp"
				android:paddingRight="10dp"
				android:text="@string/we_assure_you_that_your_personal_and_credit_card_information_will_not_be_used_without_your_explicit_consent__string" />

			<Space
				android:layout_width="match_parent"
				android:layout_height="20dp" />

			<TextView
				android:id="@+id/cardholder_name_text"
				android:layout_width="400dp"
				android:layout_height="wrap_content"
				android:fontFamily="@font/andada"
				android:textStyle="bold"
				android:textSize="20sp"
				android:textColor="#000000"
				android:text="@string/card_holder_name_string" />

			<Space
				android:layout_width="match_parent"
				android:layout_height="10dp" />

			<EditText
				android:id="@+id/cardholder_name_input"
				android:layout_width="400dp"
				android:layout_height="50dp"
				android:ems="10"
				android:textStyle="italic"
				android:inputType="text"
				android:fontFamily="@font/andada"
				android:paddingLeft="2mm"
				android:background="@drawable/signup_input"
				android:hint="@string/card_holder_name_string" />

			<Space
				android:layout_width="match_parent"
				android:layout_height="20dp" />

			<TextView
				android:id="@+id/card_number_text"
				android:layout_width="400dp"
				android:layout_height="wrap_content"
				android:fontFamily="@font/andada"
				android:textStyle="bold"
				android:textSize="20sp"
				android:textColor="#000000"
				android:text="@string/credit_debit_card_numbers_string" />
			<Space
				android:layout_width="match_parent"
				android:layout_height="10dp" />

			<EditText
				android:id="@+id/card_number_input"
				android:layout_width="400dp"
				android:layout_height="50dp"
				android:ems="10"
				android:textStyle="italic"
				android:fontFamily="@font/andada"
				android:inputType="number"
				android:paddingLeft="2mm"
				android:background="@drawable/signup_input"
				android:hint="@string/credit_debit_card_numbers_prompt_string" />

			<Space
				android:layout_width="match_parent"
				android:layout_height="20dp" />

			<TextView
				android:id="@+id/CVV_number_text"
				android:layout_width="400dp"
				android:layout_height="wrap_content"
				android:fontFamily="@font/andada"
				android:textStyle="bold"
				android:textSize="20sp"
				android:textColor="#000000"
				android:text="@string/cvv_number_string" />

			<Space
				android:layout_width="match_parent"
				android:layout_height="10dp" />

			<EditText
				android:id="@+id/CVV_number_input"
				android:layout_width="400dp"
				android:layout_height="50dp"
				android:ems="10"
				android:textStyle="italic"
				android:fontFamily="@font/andada"
				android:paddingLeft="2mm"
				android:background="@drawable/signup_input"
				android:inputType="number"
				android:hint="@string/cvv_prompt_string"/>

			<Space
				android:layout_width="match_parent"
				android:layout_height="20dp" />

			<TextView
				android:id="@+id/card_exdate_text"
				android:layout_width="400dp"
				android:layout_height="wrap_content"
				android:fontFamily="@font/andada"
				android:textStyle="bold"
				android:textSize="20sp"
				android:textColor="#000000"
				android:text="Expiration Date" />

			<Space
				android:layout_width="match_parent"
				android:layout_height="10dp" />

			<EditText
				android:id="@+id/card_exdate_input"
				android:layout_width="400dp"
				android:layout_height="50dp"
				android:ems="10"
				android:textStyle="italic"
				android:fontFamily="@font/andada"
				android:paddingLeft="2mm"
				android:inputType="number"
				android:background="@drawable/signup_input"
				android:hint="MM/YY"/>


			<Space
				android:layout_width="match_parent"
				android:layout_height="5dp" />



			<TextView
				android:id="@+id/warning_sign_student"
				android:layout_width="400dp"
				android:layout_height="wrap_content"
				android:fontFamily="@font/andada"
				android:textStyle="bold"
				android:textSize="16sp"
				android:textColor="#E00000"
				android:textAlignment="center"
				android:text="@string/signup_warning"
				android:visibility="invisible" />

			<Space
				android:layout_width="match_parent"
				android:layout_height="5dp" />


			<TextView
				android:id="@+id/warning_sign_exdate"
				android:layout_width="400dp"
				android:layout_height="wrap_content"
				android:fontFamily="@font/andada"
				android:textStyle="bold"
				android:textSize="16sp"
				android:textColor="#E00000"
				android:textAlignment="center"
				android:text="@string/expiration_warning"
				android:visibility="invisible" />

			<Space
				android:layout_width="match_parent"
				android:layout_height="10dp" />

			<Button
				android:id="@+id/submit_student_button"
				android:layout_width="200dp"
				android:layout_height="50dp"
				android:background="@drawable/rounded_button"
				android:fontFamily="@font/andada"
				android:text="@string/submit_string"
				android:textSize="28dp"
				android:textColor="#FFFFFF"
				android:textStyle="bold" />

			<Space
				android:layout_width="match_parent"
				android:layout_height="20dp" />
		</LinearLayout>
	</ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>