<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GUI.SignUpLauncherActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/logo_image"
            android:layout_width="400dp"
            android:layout_height="300dp"
            android:contentDescription="@string/logo_image_string"
            app:srcCompat="@drawable/groupoflearners" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <TextView
            android:id="@+id/welcome_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/andada"
            android:text="@string/welcome_to_string"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <TextView
            android:id="@+id/intro_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/andada"
            android:text="@string/intro_text_string"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <TextView
            android:id="@+id/tutor_text_prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/andada"
            android:text="@string/sign_up_prompt_string"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/tutor_btn"
                android:layout_width="180dp"
                android:layout_height="100dp"
                android:background="@drawable/rounded_button"
                android:fontFamily="@font/andada"
                android:text="@string/tutor_btn_string"
                android:textColor="#000000"
                android:textSize="30sp"
                android:gravity="center"
                android:textStyle="italic" />

            <Space
                android:layout_width="15dp"
                android:layout_height="wrap_content"
                />

            <Button
                android:id="@+id/student_btn"
                android:layout_width="180dp"
                android:layout_height="100dp"
                android:background="@drawable/rounded_button"
                android:fontFamily="@font/andada"
                android:gravity="center"
                android:text="@string/student_btn_string"
                android:textColor="#000000"
                android:textSize="30sp"
                android:textStyle="italic" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>