<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GUI.LandingPageActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/andada"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:gravity="center"
            android:textColor="#0088C8"
            android:textSize="48sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <ImageView
            android:id="@+id/landing_image"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:src="@drawable/studyingperson" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <TextView
            android:id="@+id/landing_welcome_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Tutron_landing_prompt"
            android:textAlignment="center"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textStyle="bold"
            android:fontFamily="@font/andada"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/landing_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/landing_desc"
            android:textAlignment="center"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            android:fontFamily="@font/andada"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/landing_action_prompt_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/landing_action_prompt"
            android:textAlignment="center"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="italic"
            android:fontFamily="@font/andada"
            android:paddingLeft="2mm"
            android:paddingRight="2mm"/>


        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/loginButton"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:background="@drawable/rounded_button"
                android:gravity="center"
                android:text="@string/login_text"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="italic"
                android:fontFamily="@font/andada"/>

            <Space
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                />

            <Button
                android:id="@+id/signupButton"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:background="@drawable/rounded_button"
                android:gravity="center"
                android:text="@string/sign_up_text"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="italic"
                android:fontFamily="@font/andada"/>
        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>